--- a/health_security/pom.xml
+++ b/health_security/pom.xml
@@ -7,6 +7,13 @@
     <version>1.0-SNAPSHOT</version> 
   </parent>  
   <modelVersion>4.0.0</modelVersion>  
-  <artifactId>health_test</artifactId>
-  <packaging>war</packaging> 
+  <artifactId>health_security</artifactId>  
+  <packaging>war</packaging>
+  <dependencies> 
+    <dependency> 
+      <groupId>com.chen</groupId>  
+      <artifactId>health_pojo</artifactId>  
+      <version>1.0-SNAPSHOT</version> 
+    </dependency> 
+  </dependencies> 
 </project>
